--- a/pod-definition-configmap.yml
+++ b/pod-definition-configmap.yml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  labels:
+    name: webapp-color
+  name: webapp-color
+  namespace: default
 spec:
   containers:
-  - name: nginx
-    image: nginx
-  ports:
-  - containerPort: 8080
-  envFrom:
-  - configMapRef:
-      name: app-config
+    - envFrom:
+        - configMapRef:
+            name: webapp-config-map
+      image: kodekloud/webapp-color
+      imagePullPolicy: Always
+      name: webapp-colormaster
